--- a/ToDo/res/values/strings.xml
+++ b/ToDo/res/values/strings.xml
@@ -18,6 +18,6 @@
 
     <!-- Titulo activity -->
     <string name="title_activity_cadastrar_usuario">Cadastrar Usuário</string>
-    <string name="title_activity_activity_lista_tarefas">ActivityListaTarefas</string>
+    <string name="title_activity_activity_lista_tarefas">To Do</string>
 
 </resources>
